# umackereld

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  README.md  configure.ac
etc/init.d/: umackereld
scripts/: build.sh
src/: Makefile.am  api.c  api.h  api_client.c  api_internal.h  api_request.c  conf.c  conf.h  fileutil.c  fileutil.h  hostid.c  hostid.h  hostspec.h  hostspec_block_device.c  hostspec_cpu.c  hostspec_filesystem.c  hostspec_hostname.c  hostspec_interfaces.c  hostspec_kernel.c  hostspec_memory.c  log.h  main.c  metrics.c  metrics.h  metrics_custom.c  metrics_loadavg.c  stringutil.c  stringutil.h
